Revert "custom height update"
This reverts commit 7f14c109cb01e388600a9c7fd7c8f052af982689.

--- a/index.html
+++ b/index.html
@@ -175,14 +175,11 @@
                                                       </span>
                                                       <span class="commentthread_subscribe_desc">Shorten Right Image</span>
                                                    </div>
-                                                </div>
-                                                <div>
-                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox" style="position:relative;height:15px;width:165px;top:2px;">
-                                                      <input class="dynInput" type="text" size="10" id="AWSC_CustomHeight" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
+                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
+                                                      <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
                                                    <div class="btn_grey_white_innerfade btn_small" style="margin-bottom:5px;margin-left:5px;display:none;" id="autoResize_AWSC" onclick="autoCropHeight_2(1);"><span>Auto Resize</span></div>
                                                 </div>
-                                                <span id="AWSC_NaN" class="hidden" style="color:#ff0000; margin-left:5px;">Not a number, this wont work.</span>
                                              </div>
                                           </div>
                                           <div class="market_listing_row market_recent_listing_row">
@@ -209,14 +206,11 @@
                                                       </span>
                                                       <span class="commentthread_subscribe_desc">Shorten Right Image</span>
                                                    </div>
-                                                </div>
-                                                <div>
-                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox" style="position:relative;height:15px;width:165px;top:2px;">
-                                                      <input class="dynInput" id="SSSC_CustomHeight" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
+                                                   <div class="gray_bevel for_text_input showlong_buttons customize_textbox hidden" style="position:relative;display:none;height:15px;width:165px;top:2px;">
+                                                      <input class="dynInput hidden" type="text" size="10" placeholder="Enter a Custom Height Here" style="height:10px;position:relative;bottom:1px;">
                                                    </div>
                                                    <div class="btn_grey_white_innerfade btn_small" style="margin-bottom:5px;margin-left:5px;display:none;" id="autoResize_SSSC" onclick "autoCropHeight_2(2);"><span>Auto Resize</span></div>
                                                 </div>
-                                                <span id="SSSC_NaN" class="hidden" style="color:#ff0000;margin-left:5px;">Not a number, this wont work.</span>
                                              </div>
                                           </div>
                                           <div class="market_listing_row market_recent_listing_row">
