add customize button event

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="btn_profile_action btn_medium" style="left:7px; position:relative;top:9px;" onclick="toggleCustomize()">
+                        <div class="btn_profile_action btn_medium" style="left:7px; position:relative;top:9px;" onclick="toggleCustomize()" id="openCustomizeButton">
                            <span style=" text-align:center; ">Customize Cropping</span>
                         </div>
                      </div>
