Replace AP with Free Artwork

--- a/index.html
+++ b/index.html
@@ -723,6 +723,17 @@
                         <div class="profile_group_membercount">Leaderboard and ranking site for Steam profiles!</div>
                         <div style="clear: left;"></div>
                      </div>
+                     <div class="profile_group profile_primary_group">
+                        <div class="profile_group_avatar">
+                           <a href="http://steamcommunity.com/groups/FreeArtwork">
+                                 <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/07/07371a76a92abf8fb481a8921b9f0888012e1a4f_medium.jpg">
+                                 </a>
+                        </div>
+                        <a class="whiteLink" href="http://steamcommunity.com/groups/FreeArtwork">
+                              Free Artwork										</a>
+                        <div class="profile_group_membercount">A bot that makes free animated art for your showcase!</div>
+                        <div style="clear: left;"></div>
+                     </div>
                   </div>
                </div>
                <div class="profile_friend_links profile_count_link_preview_ctn responsive_groupfriends_element">
