Beginnings of share update

--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
                                           </select>
                                              </div>
                                           </div>
+                                          <div class="market_listing_row market_recent_listing_row">
+                                             <div class="bb_h1 customize_textbox">
+                                                <b>Share URL:</b>
+                                             </div>
+                                             <span style="margin:5px;">Copy and use this URL to share your background and crop settings with someone else!</span>
+                                              <span style="margin-left:5px;display:block;"> Some parts of the URL are hidden, make sure to triple click to select it all.</span>
+                                             <div class="commentthread_entry_quotebox" style="width:500px;margin:5px;">
+                                                <input rows="1" class="commentthread_textarea" id="shareURL" type="text" size="500" style="overflow: hidden;"disabled="disabled" placeholder="">
+                                             </div>
+                                           </div>
                                        </div>
                                     </div>
                                  </div>
@@ -291,6 +301,7 @@
                      </div>
                      <div class="profile_customization_block">
                         <div id="artworkshowcase" class="screenshot_showcase" style="display:flow-root;">
+                          <input id="AWSC_Location" class="locationvar" value="1">
                            <div class="screenshot_showcase_primary showcase_slot ">
                               <div class="screenshot_showcase_screenshot resizable-awsc" id="hBig1" style="height: 506px;">
                                  <div id="big1" class="imageHolder"></div>
@@ -331,6 +342,7 @@
                      </div>
                   </div>
                   <div id="sssc" class="profile_customization showcase_2 hidden">
+                    <input id="SSSC_Location" class="locationvar" value="2">
                      <div class="profile_customization_header">Screenshot Showcase
                      </div>
                      <div class="profile_customization_block">
@@ -374,6 +386,7 @@
                      </div>
                   </div>
                   <div class="profile_customization showcase_3 hidden" id="ws">
+                    <input id="WSSC_Location" class="locationvar" value="3">
                      <div class="profile_customization_header">
                         Workshop Showcase
                      </div>
