--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                      </div>
                      <div class="profile_customization_block">
                         <div id="artworkshowcase" class="screenshot_showcase" style="display:flow-root;">
-                          <input id="AWSC_Location" class="locationvar" value="1">
+                          <input id="AWSC_Location" class="locationvar hidden" value="1">
                            <div class="screenshot_showcase_primary showcase_slot ">
                               <div class="screenshot_showcase_screenshot resizable-awsc" id="hBig1" style="height: 506px;">
                                  <div id="big1" class="imageHolder"></div>
@@ -342,7 +342,7 @@
                      </div>
                   </div>
                   <div id="sssc" class="profile_customization showcase_2 hidden">
-                    <input id="SSSC_Location" class="locationvar" value="2">
+                    <input id="SSSC_Location" class="locationvar hidden" value="2">
                      <div class="profile_customization_header">Screenshot Showcase
                      </div>
                      <div class="profile_customization_block">
@@ -386,7 +386,7 @@
                      </div>
                   </div>
                   <div class="profile_customization showcase_3 hidden" id="ws">
-                    <input id="WSSC_Location" class="locationvar" value="3">
+                    <input id="WSSC_Location" class="locationvar hidden" value="3">
                      <div class="profile_customization_header">
                         Workshop Showcase
                      </div>
