--- a/index.html
+++ b/index.html
@@ -247,10 +247,11 @@
                                           </div>
                                           <div class="market_listing_row market_recent_listing_row">
                                              <div class="bb_h1 customize_textbox">
-                                                <b>Share URL:</b>
+                                                <b>Share URL (Beta):</b>
                                              </div>
-                                             <span style="margin:5px;">Copy and use this URL to share your background and crop settings with someone else!</span>
-                                              <span style="margin-left:5px;display:block;"> Some parts of the URL are hidden, make sure to triple click to select it all.</span>
+                                             <span style="margin-left:5px;margin-top:5px;">Copy and use this URL to share your background and crop settings with someone else!</span>
+                                              <span style="margin-left:5px;margin-bottom:5px;margin-top:5px;display:block;">Some parts of the URL are hidden, make sure to triple click to select it all.</span>
+                                              <span style="margin-left:5px;display:block;">This feature is currently in <b>BETA.</b> If you find any bugs, please tell Oddball in the Discord.</span>
                                              <div class="commentthread_entry_quotebox" style="width:500px;margin:5px;">
                                                 <input rows="1" class="commentthread_textarea" id="shareURL" type="text" size="500" style="overflow: hidden;"disabled="disabled" placeholder="">
                                              </div>
