--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
    <link rel="manifest" href="./images/manifest.json">
-   <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#2b5797">
+   <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#1b2838">
    <link rel="shortcut icon" href="./images/favicon.ico">
    <meta name="apple-mobile-web-app-title" content="Steam.Design">
    <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
    <meta name="application-name" content="Steam.Design">
    <meta name="msapplication-config" content="./images/browserconfig.xml">
-   <meta name="theme-color" content="#2b5797">
+   <meta name="theme-color" content="#142436">
    <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
    <!-- for Facebook -->
    <meta property="og:title" content="Steam Background Crop Tool" />
