--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
             Powered by STEAM. <span id="version">Version #{{#vernum}}</span><br> Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
 
          <span>Thanks to our Patrons:
-              Dreg, Max Haskiewicz, and ЦРИСТОВА
+              Dreg, Max Haskiewicz, Seth Startix, and ЦРИСТОВА
          </span>
       </div>
    </div>
