--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
    <meta name="application-name" content="Steam.Design">
    <meta name="msapplication-config" content="./images/browserconfig.xml">
-   <meta name="theme-color" content="#142436">
+   <meta name="theme-color" content="#142436f">
    <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
    <!-- for Facebook -->
    <meta property="og:title" content="Steam Background Crop Tool" />
@@ -739,13 +739,24 @@
                      </div>
                      <div class="profile_group profile_primary_group">
                         <div class="profile_group_avatar">
-                           <a href="http://steamcommunity.com/groups/FreeArtwork">
+                           <a href="https://steamcommunity.com/groups/FreeArtwork">
                                  <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/07/07371a76a92abf8fb481a8921b9f0888012e1a4f_medium.jpg">
                                  </a>
                         </div>
-                        <a class="whiteLink" href="http://steamcommunity.com/groups/FreeArtwork">
+                        <a class="whiteLink" href="https://steamcommunity.com/groups/FreeArtwork">
                               Free Artwork										</a>
                         <div class="profile_group_membercount">A bot that makes free animated art for your showcase!</div>
+                        <div style="clear: left;"></div>
+                     </div>
+                     <div class="profile_group profile_primary_group">
+                        <div class="profile_group_avatar">
+                           <a href="https://level.guide">
+                                 <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/70/70247caca6bf4facd475c24f4e5e88558417bfd6_medium.jpg">
+                                 </a>
+                        </div>
+                        <a class="whiteLink" href="https://level.guide">
+                              List of Steam Level Up Bots										</a>
+                        <div class="profile_group_membercount">A list of all the bots for Steam leveling.</div>
                         <div style="clear: left;"></div>
                      </div>
                   </div>
