Community modal prep

--- a/index.html
+++ b/index.html
@@ -827,6 +827,21 @@
    </div>
    </div>
    </div>
+   <div id="community_updates" class="newmodal" style="position: fixed; z-index: 1000; left: 50%; top: 15%; display: none; transform: translateX(-50%);">
+      <div class="newmodal_header_border">
+         <div class="newmodal_header">
+            <span>Some Community Updates!</span>
+            <div id="community_close" class="newmodal_close" />
+         </div>
+      </div>
+      <div class="newmodal_content_border">
+         <div class="newmodal_content">
+            <div class="market_dialog_content">
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
    <div id="footer_spacer"></div>
    <div id="footer">
       <div class="footer_content">
