--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="market_dialog_content">
                           <div class="market_dialog_iteminfo">
                             <div class="market_listing_row market_recent_listing_row">
-                              <div class="bb_h1 customize_textbox" id="cache_text" class='{{vernum}}' style="color:red">
+                              <div class="bb_h1 customize_textbox {{vernum}}" id="cache_text" style="color:red">
                                 <b>It seems you dont have latest version cached. <br />
                                                Some functions of the site may not work. <br />
                                                Press Ctrl + Shift + R to grab the new version. <br />
