you shouldnt see that

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                           <div class="market_dialog_iteminfo">
                             <div class="market_listing_row market_recent_listing_row">
                               <div class="bb_h1 customize_textbox" id="cache_text" style="color:red">
-                                <input id="cache_text_val" value=" {{#vernum}} ">
+                                <input id="cache_text_val" value=" {{#vernum}} " style="display:none;">
                                 <b>It seems you dont have latest version cached. <br />
                                                Some functions of the site may not work. <br />
                                                Press Ctrl + Shift + R to grab the new version. <br />
