--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases." />
   <meta name="twitter:image" content="https://i.imgur.com/Q8kS6es.png" />
   <meta name="twitter:url" content="https://steam.design/" />
-  <!-- build:css main.css -->
+  <!-- build:css /main.css -->
   <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
   <link href="./css/buttons.css" rel="stylesheet" type="text/css">
   <link href="./css/shared_global.css" rel="stylesheet" type="text/css">
@@ -50,7 +50,7 @@
       module = undefined;
     }
   </script>
-  <!-- build:js main.js -->
+  <!-- build:js /main.js -->
   <script src="./js/jquery.min.js"></script>
   <script src="./js/linq.min.js"></script>
   <script src="./js/jquery.smooth-scroll.min.js"></script>
@@ -61,7 +61,7 @@
   <script src="./js/store.everything.min.js"></script>
   <script src="./js/jQueryRotate.js"></script>
   <!-- endbuild -->
-  <script src="./fuckadblock.js"></script>
+  <script src="/fuckadblock.js"></script>
   <script>
     if (window.module) module = window.module;
   </script>
