--- a/index.html
+++ b/index.html
@@ -885,6 +885,7 @@
 
   <div id="copiedNotification" class="copiedNotification">
     <div class="notificationBG">
+      <div>Copied!</div>
     </div>
   </div>
 
