--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                   <div class="btn_profile_action btn_medium copy-btn" data-clipboard-target="#shareURL">
                                     <span>Copy</span>
                                   </div>
-                                  <input class="dynInput" type="text" id="shareURL" onFocus="this.select()" readonly>
+                                  <input class="dynInput" type="text" id="shareURL" onFocus="this.select()" readonly placeholder="Loading...">
                                 </div>
                               </div>
 
