--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <title>Steam Background Cropper</title>
   <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="manifest" href="./images/manifest.json">
-  <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#1b2838">
-  <link rel="shortcut icon" href="./images/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="manifest" href="/images/manifest.json">
+  <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1b2838">
+  <link rel="shortcut icon" href="/images/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Steam.Design">
   <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
   <meta name="application-name" content="Steam.Design">
-  <meta name="msapplication-config" content="./images/browserconfig.xml">
+  <meta name="msapplication-config" content="/images/browserconfig.xml">
   <meta name="theme-color" content="#142436f">
   <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
   <!-- for Facebook -->
@@ -29,19 +29,19 @@
   <meta name="twitter:image" content="https://i.imgur.com/Q8kS6es.png" />
   <meta name="twitter:url" content="https://steam.design/" />
   <!-- build:css /main.css -->
-  <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
-  <link href="./css/buttons.css" rel="stylesheet" type="text/css">
-  <link href="./css/shared_global.css" rel="stylesheet" type="text/css">
-  <link href="./css/globalv2.css" rel="stylesheet" type="text/css">
-  <link href="./css/modalContent.css?v=.fruFbqx6YTdG" rel="stylesheet" type="text/css">
-  <link href="./css/profilev2.css" rel="stylesheet" type="text/css">
-  <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
-  <link href="./css/header.css" rel="stylesheet" type="text/css">
-  <link href="./css/economy.css" rel="stylesheet" type="text/css">
-  <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
-  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="./css/slider.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link href="/css/motiva_sans.css" rel="stylesheet" type="text/css">
+  <link href="/css/buttons.css" rel="stylesheet" type="text/css">
+  <link href="/css/shared_global.css" rel="stylesheet" type="text/css">
+  <link href="/css/globalv2.css" rel="stylesheet" type="text/css">
+  <link href="/css/modalContent.css?v=.fruFbqx6YTdG" rel="stylesheet" type="text/css">
+  <link href="/css/profilev2.css" rel="stylesheet" type="text/css">
+  <link href="/css/motiva_sans.css" rel="stylesheet" type="text/css">
+  <link href="/css/header.css" rel="stylesheet" type="text/css">
+  <link href="/css/economy.css" rel="stylesheet" type="text/css">
+  <link href="/css/economy_inventory.css" rel="stylesheet" type="text/css">
+  <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/css/slider.css">
+  <link rel="stylesheet" href="/css/index.css">
   <!-- endbuild -->
   <script>
     if (typeof module === 'object') {
@@ -50,16 +50,16 @@
     }
   </script>
   <!-- build:js /main.js -->
-  <script src="./js/jquery.min.js"></script>
-  <script src="./js/linq.min.js"></script>
-  <script src="./js/jquery.smooth-scroll.min.js"></script>
-  <script src="./js/interact-1.2.9.min.js"></script>
-  <script src="./js/FileSaver.js"></script>
-  <script src="./js/jszip.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/store.everything.min.js"></script>
-  <script src="./js/jQueryRotate.js"></script>
-  <script src="./js/clipboard.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/linq.min.js"></script>
+  <script src="/js/jquery.smooth-scroll.min.js"></script>
+  <script src="/js/interact-1.2.9.min.js"></script>
+  <script src="/js/FileSaver.js"></script>
+  <script src="/js/jszip.js"></script>
+  <script src="/js/index.js"></script>
+  <script src="/js/store.everything.min.js"></script>
+  <script src="/js/jQueryRotate.js"></script>
+  <script src="/js/clipboard.js"></script>
   <!-- endbuild -->
   <script src="/fuckadblock.js"></script>
   <script>
