--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="market_listing_row market_recent_listing_row">
+                            <div class="market_listing_row market_recent_listing_row cache_text">
                               <div class="bb_h1 customize_textbox">
                                 <b>Screenshot Showcase:</b>
                               </div>
@@ -253,21 +253,17 @@
                             </div>
                             <div class="market_listing_row market_recent_listing_row">
                               <div class="bb_h1 customize_textbox">
-                                <b>Share URL (Beta):</b>
+                                <b>Share URL:</b>
                               </div>
                               <span style="margin-left:5px;margin-top:5px;">Copy and use this URL to share your background and crop settings with someone else!</span>
-                              <span style="margin-left:5px;margin-bottom:5px;margin-top:5px;display:block;">Some parts of the URL are hidden, make sure to triple click to select it all.</span>
-                              <span style="margin-left:5px;display:block;">This feature is currently in <b>BETA.</b> If you find any bugs, please tell Oddball in the Discord.</span>
-
-                              <div class="bg_link">
-                                <div class="gray_bevel for_text_input">
-                                  <div class="btn_profile_action btn_medium copy-btn" data-clipboard-target="#shareURL">
-                                    <span>Copy</span>
-                                  </div>
-                                  <input class="dynInput" type="text" id="shareURL" onFocus="this.select()" readonly placeholder="Loading...">
+                              <div class="bg_link" style="display:-webkit-box">
+                                <div class="btn_grey_white_innerfade btn_small copy-btn" data-clipboard-target="#shareURL" style="position:relative;top:9px;">
+                                  <span>Copy</span>
+                                </div>
+                                <div class="commentthread_entry_quotebox" style="width:165px;margin:5px;">
+                                  <input class="dynInput commentthread_textarea" type="text" id="shareURL" size="500" onFocus="this.select()" readonly placeholder="Loading...">
                                 </div>
                               </div>
-
                             </div>
                           </div>
                         </div>
