--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="market_listing_row market_recent_listing_row cache_text">
+                            <div class="market_listing_row market_recent_listing_row">
                               <div class="bb_h1 customize_textbox">
                                 <b>Screenshot Showcase:</b>
                               </div>
