Im stupid, this doesnt need to be like this

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
   <meta name="twitter:image" content="https://i.imgur.com/Q8kS6es.png" />
   <meta name="twitter:url" content="https://steam.design/" />
   <!-- build:css /main.css -->
-  <link href="/css/motiva_sans.css" rel="stylesheet" type="text/css">
-  <link href="/css/buttons.css" rel="stylesheet" type="text/css">
-  <link href="/css/shared_global.css" rel="stylesheet" type="text/css">
-  <link href="/css/globalv2.css" rel="stylesheet" type="text/css">
-  <link href="/css/modalContent.css?v=.fruFbqx6YTdG" rel="stylesheet" type="text/css">
-  <link href="/css/profilev2.css" rel="stylesheet" type="text/css">
-  <link href="/css/motiva_sans.css" rel="stylesheet" type="text/css">
-  <link href="/css/header.css" rel="stylesheet" type="text/css">
-  <link href="/css/economy.css" rel="stylesheet" type="text/css">
-  <link href="/css/economy_inventory.css" rel="stylesheet" type="text/css">
-  <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/slider.css">
-  <link rel="stylesheet" href="/css/index.css">
+  <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
+  <link href="./css/buttons.css" rel="stylesheet" type="text/css">
+  <link href="./css/shared_global.css" rel="stylesheet" type="text/css">
+  <link href="./css/globalv2.css" rel="stylesheet" type="text/css">
+  <link href="./css/modalContent.css?v=.fruFbqx6YTdG" rel="stylesheet" type="text/css">
+  <link href="./css/profilev2.css" rel="stylesheet" type="text/css">
+  <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
+  <link href="./css/header.css" rel="stylesheet" type="text/css">
+  <link href="./css/economy.css" rel="stylesheet" type="text/css">
+  <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
+  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./css/slider.css">
+  <link rel="stylesheet" href="./css/index.css">
   <!-- endbuild -->
   <script>
     if (typeof module === 'object') {
@@ -50,18 +50,18 @@
     }
   </script>
   <!-- build:js /main.js -->
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/linq.min.js"></script>
-  <script src="/js/jquery.smooth-scroll.min.js"></script>
-  <script src="/js/interact-1.2.9.min.js"></script>
-  <script src="/js/FileSaver.js"></script>
-  <script src="/js/jszip.js"></script>
-  <script src="/js/index.js"></script>
-  <script src="/js/store.everything.min.js"></script>
-  <script src="/js/jQueryRotate.js"></script>
-  <script src="/js/clipboard.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/linq.min.js"></script>
+  <script src="./js/jquery.smooth-scroll.min.js"></script>
+  <script src="./js/interact-1.2.9.min.js"></script>
+  <script src="./js/FileSaver.js"></script>
+  <script src="./js/jszip.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./js/store.everything.min.js"></script>
+  <script src="./js/jQueryRotate.js"></script>
+  <script src="./js/clipboard.js"></script>
   <!-- endbuild -->
-  <script src="/fuckadblock.js"></script>
+  <script src="./fuckadblock.js"></script>
   <script>
     if (window.module) module = window.module;
   </script>
