--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                       <div class="newmodal_content">
                         <div class="market_dialog_content">
                           <div class="market_dialog_iteminfo">
-                            <div class="market_listing_row market_recent_listing_row">
+                            <div class="market_listing_row market_recent_listing_row cache_text">
                               <div class="bb_h1 customize_textbox" id="cache_text" style="color:red">
                                 <input id="cache_text_val" value=" {{#vernum}} " style="display:none;">
                                 <b>It seems you dont have latest version cached. <br />
