Add logic so share box is always perfect width

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                               </div>
                             </div>
                             <div class="market_listing_row market_recent_listing_row">
-                              <div class="bb_h1 customize_textbox">
+                              <div class="bb_h1">
                                 <b>Share URL:</b>
                               </div>
                               <span style="margin-left:5px;margin-top:5px;">Copy and use this URL to share your background and crop settings with someone else!</span>
@@ -260,7 +260,7 @@
                                 <div class="btn_grey_white_innerfade btn_small copy-btn" data-clipboard-target="#shareURL" style="position:relative;top:9px;">
                                   <span>Copy</span>
                                 </div>
-                                <div class="commentthread_entry_quotebox" style="width:165px;margin:5px;">
+                                <div class="commentthread_entry_quotebox" id="shareWidth" style="width:165px;margin:5px;">
                                   <input class="dynInput commentthread_textarea" type="text" id="shareURL" size="500" onFocus="this.select()" readonly placeholder="Loading...">
                                 </div>
                               </div>
