add chrome extension back

--- a/index.html
+++ b/index.html
@@ -283,7 +283,12 @@
               <div class="header_real_name_spacer">&nbsp;</div>
               <div class="profile_summary">
                 <div class="bb_h1" style="top:20px; position: relative; text-align:center;">
-                  <b>Our: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> | <a class="bb_link" href="https://steamcommunity.com/groups/sapic" target="_blank" rel="noreferrer">Steam Group</a></b>
+                  <b>
+                    Our: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> |
+                    <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> |
+                    <a class="bb_link" href="https://steamcommunity.com/groups/sapic" target="_blank" rel="noreferrer">Steam Group</a> |
+                    <a class="bb_link" href="https://chrome.google.com/webstore/detail/steamdesign-buttons/mjmabgdoainclinjecbkdancpamdiaih">Chrome Extension</a>
+                  </b>
                 </div>
               </div>
               <div class="profile_summary_footer">
