--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
               <a href="https://steamcommunity.com/id/wolfenstian/groups/">
                            <span class="count_link_label">Partners of Steam.Design</span>&nbsp;
                            <span class="profile_count_link_total">
-                           3															</span>
+                           4															</span>
                            </a>
             </div>
             <div class="profile_count_link_preview">
@@ -770,6 +770,17 @@
                 <a class="whiteLink" href="https://level.guide">
                               List of Steam Level Up Bots										</a>
                 <div class="profile_group_membercount">A list of all the bots for Steam leveling.</div>
+                <div style="clear: left;"></div>
+              </div>
+              <div class="profile_group profile_primary_group">
+                <div class="profile_group_avatar">
+                  <a href="https://steamcommunity.com/groups/ArtworkProfiles">
+                                <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/a8/a8dbf5dc460745146602a2e9b61b25d7aebfed09_medium.jpg">
+                                </a> </div>
+                <a class="whiteLink" href="https://steamcommunity.com/groups/ArtworkProfiles">
+                           Artwork Profiles									</a>
+                <div class="profile_group_membercount">Celebrating the Beauty of Steam Profiles.</div>
+
                 <div style="clear: left;"></div>
               </div>
             </div>
