by request of TrueCarry, added back social likes.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <link href="./css/economy.css" rel="stylesheet" type="text/css">
   <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
   <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./css/social-likes_flat.css">
   <link rel="stylesheet" href="./css/slider.css">
   <link rel="stylesheet" href="./css/index.css">
   <!-- endbuild -->
@@ -57,6 +58,7 @@
   <script src="./js/FileSaver.js"></script>
   <script src="./js/jszip.js"></script>
   <script src="./js/index.js"></script>
+  <script src="./js/social-likes.min.js"></script>
   <script src="./js/store.everything.min.js"></script>
   <script src="./js/jQueryRotate.js"></script>
   <script src="./js/clipboard.js"></script>
@@ -282,7 +284,13 @@
               </div>
               <div class="header_real_name_spacer">&nbsp;</div>
               <div class="profile_summary">
-                <div class="bb_h1" style="top:20px; position: relative; text-align:center;">
+                  <div class="social-likes" style="top:12px; left:4%; position: relative;" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
+                    <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
+                    <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
+                    <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
+                    <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
+                  </div><br>
+                  <div class="bb_h1" style="top:12px; position: relative; text-align:center;">
                   <b>
                     Our: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> |
                     <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> |
