--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <link href="./css/economy.css" rel="stylesheet" type="text/css">
   <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
   <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="./css/social-lies_flat.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="./css/social-likes_flat.css">
   <link rel="stylesheet" href="./css/slider.css">
   <link rel="stylesheet" href="./css/index.css">
