--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
           </div>
         </div>
         <div class="profile_rightcol">
+          <div class="rColAds"></div>
           <div class="underfr" width="268"></div>
           <div class="profile_group_links profile_count_link_preview_ctn responsive_groupfriends_element">
             <div class="profile_count_link ellipsis">
